다국어 지원 및 뷰템플릿 설정 완료

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,14 @@
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
+#messages
+spring.messages.basename=i18n/messages
+
+#Dev
+spring.devtools.livereload.enabled=true
+spring.devtools.restart.enabled=true
+spring.thymeleaf.cache=false
+
+
 #Test
 spring.h2.console.enabled=true
-
-
-#view template config
-spring.thymeleaf.cache=@THYMELEAF_CACHE@
-spring.thymeleaf.mode=HTML
